# kanga-kicad-parser-rs

./: .gitignore  Cargo.toml  README.md
crates/kanga-kicad-parser/: Cargo.toml
crates/kanga-kicad-parser/src/: common.rs  lib.rs  sch.rs
crates/kanga-sexpr/: Cargo.toml
crates/kanga-sexpr-macro/: Cargo.toml
crates/kanga-sexpr-macro/src/: ks_enum.rs  ks_struct.rs  lib.rs  type_ext.rs
crates/kanga-sexpr-macro/src/ks_struct/: field.rs  shape.rs
crates/kanga-sexpr/src/: error.rs  lexpr_ext.rs  lib.rs
kanga-kicad-parser/: Cargo.toml
kanga-kicad-parser/src/: common.rs  lib.rs  sch.rs
kanga-kicad-parser/src/common/: color.rs  fill.rs  font.rs  line_style.rs  offset.rs  paper.rs  points.rs  position.rs  property.rs  size.rs  stroke.rs  symbol.rs  text_effects.rs  text_justify.rs  title_block.rs
kanga-kicad-parser/tests/: HDMI Breakout.kicad_sch  KiCadSchemaSample.kicad_sch  MoonSnailKeyboardLeft.kicad_pcb  ports.kicad_sch
