[package]
name = "kanga-kicad-parser"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/dacut/kanga-kicad-parser-rs"
homepage = "https://github.com/dacut/kanga-kicad-parser-rs"
description = "KiCad file parser"

[dependencies]
lexpr = { version = "0.2" }
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.14.0", features = ["serde"] }
