[package]
name = "kanga-sexpr-macro"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "Apache-2.0"
repository = "https://github.com/dacut/kanga-kicad-parser-rs"
homepage = "https://github.com/dacut/kanga-kicad-parser-rs"
description = "S-expression parser procedural macro"

[lib]
proc-macro = true

[dependencies]
log = "0.4.26"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full", "extra-traits"] }

[dev-dependencies]
syn = { version = "2.0.99", features = ["full", "extra-traits", "printing"] }
pretty_assertions = "1.4.1"
